# 3D-Engine-2.0

./: CMakeLists.txt  app  camera.h  engine.cpp  engine.h  image_loader.cpp  main.cpp  mesh.h  shader.h
.cache/clangd/index/: camera.h.EC7DF44D80C4033D.idx  engine.cpp.76BE7E107F875788.idx  engine.h.EBE39B4A119BF042.idx  gl.c.3158A4DB72A08BD6.idx  gl.h.9ED6EE29CDFA4441.idx  image_loader.cpp.CA4F1370AF35C026.idx  khrplatform.h.48EB5DDBC7E8E07E.idx  main.cpp.B7682D6EA7A1F4FE.idx  mesh.h.918DF8431B8F1EDA.idx  shader.h.21D1693852813CE5.idx  shaders.h.6F5BDAFD1CD9AAA5.idx  stb_image.h.A658EB7C051D46C1.idx
header_files/: camera.h  engine.h
shaders_files/: shader.vertex
